--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.format.date-time=iso
 spring.output.ansi.enabled=ALWAYS
-spring.profiles.active=dev
+
+spring.datasource.url=jdbc:mysql://localhost:3308/jwt-auth?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false&allowPublicKeyRetrieval=true&useSSL=false
+logging.level.org.springframework.security=DEBUG
+spring.datasource.username=root
+spring.datasource.password=root
+server.port=8086
