Token service creation and various optimizations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ logging.level.org.springframework.security=DEBUG
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8086
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
