--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 spring.mvc.format.date-time=iso
 spring.output.ansi.enabled=ALWAYS
-
 spring.datasource.url=jdbc:mysql://localhost:3308/jwt-auth?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false&allowPublicKeyRetrieval=true&useSSL=false
 logging.level.org.springframework.security=DEBUG
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8086
-
 api.security.token.secret=${JWT_SECRET:my-secret-key}
