Path correction and Algorithm

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ MYSQLDB_DOCKER_PORT=3306
 SPRING_LOCAL_PORT=6869
 SPRING_DOCKER_PORT=8081
 
-PC_DATABASE_PATH=C:\Users\Ferme\Documents\Code-Projects\Docker-SQL-Databases
+PC_DATABASE_PATH=C:\Users\Ferme\Documents\Code-Projects\Docker-SQL-Databases\JWT-Auth
 CONTAINER_PATH=/var/lib/mysql
 CONTAINER_FILES_PATH=/var/lib/files
